--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dropzone": "^14.3.8",
     "react-leaflet": "^5.0.0-rc.2",
     "sonner": "^2.0.3",
+    "svix": "^1.64.1",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "uploadthing": "^7.6.0",
