--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@edgestore/react": "^0.3.3",
     "@edgestore/server": "^0.3.3",
     "@prisma/client": "^6.6.0",
-    "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-alert-dialog": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-popover": "^1.1.7",
@@ -45,6 +46,7 @@
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "uploadthing": "^7.6.0",
+    "vaul": "^1.1.2",
     "zod": "^3.24.3"
   },
   "devDependencies": {
