--- a/package.json
+++ b/package.json
@@ -1,65 +1,66 @@
 {
-  "name": "adventure-travel",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@clerk/nextjs": "^6.16.0",
-    "@clerk/themes": "^2.2.34",
-    "@edgestore/react": "^0.3.3",
-    "@edgestore/server": "^0.3.3",
-    "@prisma/client": "^6.6.0",
-    "@radix-ui/react-alert-dialog": "^1.1.10",
-    "@radix-ui/react-dialog": "^1.1.10",
-    "@radix-ui/react-dropdown-menu": "^2.1.7",
-    "@radix-ui/react-label": "^2.1.3",
-    "@radix-ui/react-popover": "^1.1.7",
-    "@radix-ui/react-progress": "^1.1.3",
-    "@radix-ui/react-separator": "^1.1.3",
-    "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-tooltip": "^1.2.0",
-    "@uploadthing/react": "^7.3.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "embla-carousel-autoplay": "^8.6.0",
-    "embla-carousel-fade": "^8.6.0",
-    "embla-carousel-react": "^8.6.0",
-    "leaflet": "^1.9.4",
-    "leaflet-defaulticon-compatibility": "^0.1.2",
-    "leaflet-geosearch": "^4.2.0",
-    "lucide-react": "^0.488.0",
-    "motion": "^12.7.4",
-    "next": "15.3.0",
-    "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-dropzone": "^14.3.8",
-    "react-leaflet": "^5.0.0-rc.2",
-    "sonner": "^2.0.3",
-    "svix": "^1.64.1",
-    "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5",
-    "uploadthing": "^7.6.0",
-    "vaul": "^1.1.2",
-    "zod": "^3.24.3"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/leaflet": "^1.9.17",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.0",
-    "prisma": "^6.6.0",
-    "tailwindcss": "^4",
-    "typescript": "^5"
-  }
+	"name": "adventure-travel",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"postinstall": "prisma generate"
+	},
+	"dependencies": {
+		"@clerk/nextjs": "^6.16.0",
+		"@clerk/themes": "^2.2.34",
+		"@edgestore/react": "^0.3.3",
+		"@edgestore/server": "^0.3.3",
+		"@prisma/client": "^6.6.0",
+		"@radix-ui/react-alert-dialog": "^1.1.10",
+		"@radix-ui/react-dialog": "^1.1.10",
+		"@radix-ui/react-dropdown-menu": "^2.1.7",
+		"@radix-ui/react-label": "^2.1.3",
+		"@radix-ui/react-popover": "^1.1.7",
+		"@radix-ui/react-progress": "^1.1.3",
+		"@radix-ui/react-separator": "^1.1.3",
+		"@radix-ui/react-slot": "^1.2.0",
+		"@radix-ui/react-tooltip": "^1.2.0",
+		"@uploadthing/react": "^7.3.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
+		"embla-carousel-autoplay": "^8.6.0",
+		"embla-carousel-fade": "^8.6.0",
+		"embla-carousel-react": "^8.6.0",
+		"leaflet": "^1.9.4",
+		"leaflet-defaulticon-compatibility": "^0.1.2",
+		"leaflet-geosearch": "^4.2.0",
+		"lucide-react": "^0.488.0",
+		"motion": "^12.7.4",
+		"next": "15.3.0",
+		"next-themes": "^0.4.6",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-dropzone": "^14.3.8",
+		"react-leaflet": "^5.0.0-rc.2",
+		"sonner": "^2.0.3",
+		"svix": "^1.64.1",
+		"tailwind-merge": "^3.2.0",
+		"tw-animate-css": "^1.2.5",
+		"uploadthing": "^7.6.0",
+		"vaul": "^1.1.2",
+		"zod": "^3.24.3"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@tailwindcss/postcss": "^4",
+		"@types/leaflet": "^1.9.17",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"eslint": "^9",
+		"eslint-config-next": "15.3.0",
+		"prisma": "^6.6.0",
+		"tailwindcss": "^4",
+		"typescript": "^5"
+	}
 }
